--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     compile "org.apache.poi:poi:3.17"
     compile "org.apache.poi:poi-ooxml:3.17"
     testCompile("org.springframework.boot:spring-boot-starter-test")
+    
+    compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-jasper', version: '9.0.14'
+    
 }
 
 
